--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"],
+    },
   },
   "ts-node": {
     "compilerOptions": {
